Revert "-fixed the old bug of tikme sidebar logo overlapping"
This reverts commit 4c05938b01106b241817aca3c47b9f666a8bed9b.

--- a/backend/api/static/css/sidebar.css
+++ b/backend/api/static/css/sidebar.css
@@ -9,16 +9,10 @@
     border-right: 1px solid #ddd;
     z-index: 1;
     transition: width 0.3s; /* Smooth transition for sidebar width */
-    display: flex;
-    flex-direction: column; /* Flexbox layout */
     
 }
 
 .sidebar {
-    flex: 1; /* Takes up available vertical space */
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
     height: 100%;
     width: 250px;
     position: fixed;
@@ -31,7 +25,7 @@
     transition: width 0.3s;
     font-family: 'Poppins';
     overflow-y: auto;
-    font-weight: bold;
+    
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
@@ -73,29 +67,6 @@
     margin: 0;
     padding: -1px 0px 0px 0px;
 }
-
-.sidebar-footer {
-    flex-shrink: 0; /* Prevent shrinking */
-    text-align: center;
-    padding: 10px 0;
-    margin-top: auto;
-    position: relative; /* Ensure it stays within the sidebar */
-}
-
-.sidebar-footer img {
-    width: 80px;
-    margin-bottom: 10px;
-}
-
-.sidebar-footer p {
-    font-size: 12px;
-    color: #ff0707;
-}
-.tikme-logo{
-    display: block;
-}
-
-
 /* hamburger button */
 .menu-btn{
     background-color:white;
@@ -210,9 +181,10 @@ a i,
     font-size: 14px;
     color: #ffffff; /*968DF4*/
 }
-
-
-
+.dropdown-container a::after{
+    font-size: 14px;
+    color: #968DF4; /*968DF4*/
+}
 .sidebar-footer {
     position: absolute;
     bottom: 20px;
